finished non-bonus work

--- a/blitter_angular/index.html
+++ b/blitter_angular/index.html
@@ -11,7 +11,8 @@
     <script src="js/bleets/bleet.factory.js"></script>
     <script src="js/bleets/index.controller.js"></script>
     <script src="js/bleets/show.controller.js"></script>
-
+    <script src="js/bleets/new.controller.js"></script>
+    <script src="js/bleets/edit.controller.js"></script>
 
   </head>
 
