added created at

--- a/blitter_angular/js/bleets/index.html
+++ b/blitter_angular/js/bleets/index.html
@@ -3,9 +3,16 @@
 <h3><a data-ui-sref="bleetNew">Create a new bleet</a></h3>
 
 <div data-ng-repeat="bleet in BleetIndexViewModel.bleets">
-  <a data-ui-sref="bleetShow({id: bleet.id})">{{bleet.content}}</a> <button>Like</button>
+  <a data-ui-sref="bleetShow({id: bleet.id})">{{bleet.content}}</a>
+  <button>Like</button>
+  <p>Likes: {{bleet.likes}}</p>
+
   <p>
     <a data-ui-sref="bleetEdit({id: bleet.id})">Edit</a> |
     <a data-ui-sref="bleetEdit({id: bleet.id})">Delete</a>
+  </p>
+
+  <p>
+    Created at: {{bleet.created_at | date : 'MMM-dd-yy hh:mm a'}}
   </p>
 </div>
